Forum text overlapping Flame icon issue Fix.

--- a/docroot/sites/all/themes/ambitious/sass/layouts/forum.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/forum.scss
@@ -103,7 +103,10 @@
           }
           h3{
             margin-bottom: 0px;
-        max-width: 85%;
+            max-width: 82%; //initially it was 85% changed to remove the collision between the text and flame icon in Ipad.
+            @include breakpoint($mobile) {
+              max-width: 100%;
+            }
           }
           p{
             font-size:18px;
